[package]
name = "measurements"
version = "0.11.0"
authors = ["James O'Cull <jocull@delmarsd.com>",
          "Jonathan Pallant <github@thejpster.org.uk>",
          "Hannah McLaughlin <h@mcla.ug>",
          "Danilo Bargen <mail@dbrgn.ch>",
          "Tim Alberdingk Thijm <tthijm@cs.princeton.edu>",
          ]
documentation = "https://docs.rs/measurements"
repository = "https://github.com/rust-embedded-community/rust-measurements"
keywords = ["measurements", "lengths", "weights", "temperatures", "volumes"]
description = "Handle metric, imperial, and other measurements with ease! Types: Length, Temperature, Weight, Volume, Pressure"
license = "MIT"
readme = "README.md"

[features]
std = ["num-traits/std"]
from_str = ["regex", "std"]

[dependencies]
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }
regex = { version = "1", optional = true }
libm = { version = "0.2" }
num-traits = { version = "0.2.15", default-features = false, features = ["libm"] }
